syntax = "proto3";

package api.user_v1;

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/wrappers.proto";
import "models.proto";
import "google/api/annotations.proto";
import "validate/validate.proto";
import "protoc-gen-openapiv2/options/annotations.proto";

option go_package = "github.com/Dnlbb/user/pkg/user_v1;user_v1";

option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_swagger) = {
    info: {
        title: "User API"
        version: "1.0.0"
        contact: {
            name: "Daniil"
        };
    };

    host:"localhost:8080",
    schemes:HTTP,
    consumes:"application/json",
    produces:"application/json",
};

service UserApi {
    rpc Create(CreateRequest) returns (CreateResponse) {
        option (google.api.http) = {
            post: "/user/create"
            body: "*"
        };
    }

    rpc GetById(GetByIdRequest) returns (GetByResponse) {
        option (google.api.http) = {
            get: "/user/get-by-id"
        };
    }

    rpc GetByName(GetByNameRequest) returns (GetByResponse) {
        option (google.api.http) = {
            get: "/user/get-by-name"
        };
    }


    rpc Update(UpdateRequest) returns (google.protobuf.Empty) {
        option (google.api.http) = {
            put: "/user/update"
            body: "*"
        };
    }

    rpc Delete(DeleteRequest) returns (google.protobuf.Empty) {
        option (google.api.http) = {
            delete: "/user/delete"
        };
    }
}

message CreateRequest {
    User user = 1;
    string password = 2 [(validate.rules).string = {min_len: 1, max_len: 255}];
    string password_confirm = 3 [(validate.rules).string = {min_len: 1, max_len: 255}];
}

message CreateResponse {
    int64 id = 1;
}

message GetByIdRequest {
    int64 id = 1;
}

message GetByNameRequest {
    string name = 1;
}

message GetByNameResponse {
    int64 id = 1;
    User user = 2;
    google.protobuf.Timestamp created_at = 3;
    google.protobuf.Timestamp updated_at = 4;
}


message GetByResponse {
    int64 id = 1;
    User user = 2;
    google.protobuf.Timestamp created_at = 3;
    google.protobuf.Timestamp updated_at = 4;
}

message UpdateRequest {
    int64 id = 1;
    google.protobuf.StringValue name = 2 [(validate.rules).string = {ignore_empty: true, min_len: 1, max_len: 255}];
    google.protobuf.StringValue email = 3 [(validate.rules).string.email = true, (validate.rules).string.ignore_empty = true];
    Role role = 4;
}

message DeleteRequest {
    int64 id = 1;
}


